force-app/main/default/objects/AIP_GDS_Monthly_Revenue__c/AIP_GDS_Monthly_Revenue__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-012537</description>
    <label>GDS Monthly Revenue</label>
    <nameField>
        <displayFormat>GDS-{000000000}</displayFormat>
        <label>GDS Monthly Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDS Monthly Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>