force-app/main/default/objects/AIP_GDS_Monthly_Revenue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GDS Monthly Revenue</relationshipLabel>
    <relationshipName>GDS_Monthly_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>