force-app/main/default/objects/AIP_GDS_Monthly_Revenue__c/fields/Amadeus_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Property_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amadeus Property Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>