force-app/main/default/objects/AIP_GDS_Monthly_Revenue__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>GDS Monthly Revenue</relationshipLabel>
    <relationshipName>GDS_Monthly_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>