force-app/main/default/objects/AIP_GDS_Monthly_Revenue__c/fields/Month_Difference__c.field-meta.xml
<CustomField>
    <fullName>Month_Difference__c</fullName>
    <description>The number of months between today&apos;s day and the AIP_GDS_Revenue_Month__c field value.</description>
    <formula>(Year(today())- year(Revenue_Month__c))*12+MONTH(TODAY() ) - Month( Revenue_Month__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>