force-app/main/default/objects/AIP_GDS_Monthly_Revenue__c/fields/Number_of_GDS_Roomnights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_GDS_Roomnights__c</fullName>
    <description>This data is collected from Amadeus systems and represents number of roomnights that are flowing through Amadeus systems.</description>
    <inlineHelpText>This data is collected from Amadeus systems and represents number of roomnights that are flowing through Amadeus systems.</inlineHelpText>
    <label>Number of GDS Roomnights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>