force-app/main/default/objects/AIP_GDS_Monthly_Revenue__c/fields/Revenue_Month__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Month</label>
    <type>Date</type>
</CustomField>